--- a/flask_yandex/templates/index.html
+++ b/flask_yandex/templates/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <div class="content">
-        <h1>Adstetica</h1>
+        <h1>Конструктор сториз</h1>
         <form method="POST">
             <input type="text" name="text" value="{{ text }}">
             <input type="submit" value="Сгенерировать">
